ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: projects
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: helsinki-places.cube.local
      http:
        paths:
          - path: /helsinki-places
            pathType: Prefix
            backend:
              service:
                name: helsinki-places-api-svc
                port:
                  number: 5000
